# clawix

./: .gitignore  .signing.env.example  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONSTITUTION.md  CONTRIBUTING.md  FUNDING.md  NOTICE  PERF.md  README.md  STANDARDS.md  STYLE.md  TRADEMARKS.md
.github/: PULL_REQUEST_TEMPLATE.md
android/: .gitignore  README.md  gradle.properties  settings.gradle.kts
cli/: README.md  package.json
docs/: agentic-naming-guide.md  code-hygiene-baseline.json  code-hygiene-completion-audit.md  code-hygiene-decision-checklist.md  code-hygiene-decisions.json  code-hygiene-knip-report.json  code-hygiene-knip-report.md  code-hygiene-ledger.md  code-hygiene-periphery-report.json  code-hygiene-periphery-report.md  code-hygiene-report.json  code-hygiene-report.md  code-hygiene-tools.json  codebase-manifest.json  data-storage-boundary.md  decision-map.md  host-ownership.md  interface-matrix.md  interface-surface-clawix.registry.json  naming-shape-audit.md  naming-style-guide.md  persistent-surface-clawix.manifest.json  source-size-baseline.json  v1-surface-closure-acceptance.json  v1-surface-closure-completion-audit.md  v1-surface-closure-decisions.json  v1-surface-closure-validation.json  vocabulary.md  vocabulary.registry.json
ios/: Clawix.xcconfig  project.yml
linux/: CLAUDE.md  (+1 more)
linux/app/src-tauri/: Cargo.toml  tauri.conf.json
linux/app/src-tauri/capabilities/: default.json
linux/app/src-tauri/src/: chat_db.rs  daemon_client.rs  dictation.rs  lib.rs  main.rs  selection_sniffer.rs  service_manager.rs  shortcuts.rs  text_injector.rs  tray.rs
(+1946 files in other folders)
